--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,6 @@ Gunicorn==21.2.0
 python-dotenv==1.0.0
 Flask-SQLAlchemy==3.1.1
 SQLAlchemy==2.0.23
-squareup==36.1.0python-slugify==8.0.1
+squareup==36.1.0
+python-slugify==8.0.1
+requests==2.31.0
